Fix wrong margin-top on store/products page

--- a/app/assets/stylesheets/website/website.css.scss
+++ b/app/assets/stylesheets/website/website.css.scss
@@ -506,7 +506,6 @@ body {
 	float: left;
 	width: 620px;
 	margin-left: 30px;
-	margin-top: 70px;
 	padding-bottom: 500em;
 	margin-bottom: -500em;
 }
